--- a/portf/templates/base.html
+++ b/portf/templates/base.html
@@ -7,19 +7,19 @@
     <title>🐸Суворов Роман🐸</title>
     {% load static %}
     <link rel="icon" type="image/png" href="/static/img/logo.png">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.2.1/dist/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
     <body>
         <a href="{% url 'set_language' %}?language=ru">
-            <button id="btn_ru" class="btn btn-primary" onclick="highlightButton(this)">Русский</button>
+            <button id="btn_ru" class="btn-primary" onclick="highlightButton(this)">Русский</button>
         </a> 
         <a href="{% url 'set_language' %}?language=en">
-            <button id="btn_en" class="btn btn-primary" onclick="highlightButton(this)">English</button>
+            <button id="btn_en" class="btn-primary" onclick="highlightButton(this)">English</button>
         </a>
         <div class="container">
             <div class="row">
-                <div class="card box-shadow m-2 from-w">
+                <div class="card shadow m-2 from-w">
                     {% block content %}
                     {% endblock %}
                 </div>
