--- a/portf/templates/explanation.html
+++ b/portf/templates/explanation.html
@@ -8,7 +8,7 @@
     <div class="card-header text-center">
         <h3> {% trans "Суворов Роман" %} </h3>
     </div>
-    <div class="text-center">
+    <div>
         <div class="photo">
             <img src="/static/img/face.png" alt="Фото">
         </div>
