--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -3,16 +3,20 @@ p {
     padding-top: 40px;
   }
   
-  body {
-    width: 100%;
-    height: 100vh;
-    background: white;
-    position: relative;
-    overflow: hidden; 
-    animation-name: changeBackground;
-    animation-duration: 60s;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
+body {
+  width: 100%;
+  height: 100vh;
+  background: white;
+  position: relative;
+  overflow: hidden; 
+  animation-name: changeBackground;
+  animation-duration: 60s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+
+a {
+  padding: 20px;
 }
 
 @keyframes changeBackground {
@@ -67,10 +71,6 @@ body {
   
   .submit-btn {
      text-align: center;
-  }
-
-  .btn-primary{
-    padding: 20px;
   }
 
   .btn-primary.active {
@@ -135,18 +135,18 @@ body {
   color: rgb(0, 0, 0);  /
 }
 .photo {
+  padding: 20px;
+  border-radius: 20px;
   width: 30%;
   max-width: 30%;
   float: left;
 }
 
 .photo img {
-  padding: 20px;
   width: 100%; 
   height: auto; 
   max-width: 100%; 
   display: block;
-  border-radius: 20px;
 }
 
 .content-left {
