--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,7 @@
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
+
 p {
     padding-left: 40px;
     padding-top: 40px;
